	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1145)
 * configure will try to detect curses/ncurses.
# (r1144)
 * fix: -lfl linkage is not really necessary: removed it.
# (r1143)
 * fix: support for PPM files with 2 bytes per sample.
# (r1136)
 * limit '-set_union' will merge current limited list with the new one.
# (r1135)
 * limit '-merge' will merge current limited list with the new one.
# (r1133,r1134)
 * desc 'reload' load once again description files specified at the command line with --load-image-descriptions-file.
# (r1130,r1131)
 * Won't check for duplicates on command line specified files unless sorting is requested.
# (r1127,r1128)
 * Optimized the `limit' command.
# (r1126)
 * Added a stand-alone `make ltests' goal to test fim' language only.
# (r1124)
 * Fix to configure script regex_t check: was unnecessarily broken.
# (r1113)
 * Fix to the -P/--text-reading switch (seems to be broken in version 0.5).
# (r1108)
 * Removed commands 'negate' and 'desaturate'; use new command "color": "color 'negate'" and "color 'desaturate'".
# (r1107-r1011)
 * "color CVS" (CVS among 'protanopia', 'deuteranopia', 'tritanopia', 'p', 'd', 't') simulates a color vision deficiency;
   adding 'daltonize' applies a tentative color correction.
   "color 'colorblind'" is short for "color 'deuteranopia'" (bound to key '[').
   Key ']' bound to "color 'colorblind' 'daltonize'".
# (r1112)
 * "color 'identity'": populate the image with 'RGB identity' pixels.
# (r1104)
 * Language standard level (and a few features) will be enabled and set from the value of the predefined __cplusplus macro.
# (r1079)
 * Introduced a "#!fim:/=dir" special description line to specify dir prepended to basename.
 * Introduced a "#!fim:\=dir" special description line to specify dir prepended to filepath.
# (r1076)
 * misc fixes of minor things causing compile warnings
# (r1075)
 * fix: was likely using uninitialized data in Image()
# (r1074)